k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-mail
  labels:
    app: discord-mail
spec:
  type: ClusterIP
  ports:
  - port: 25
    targetPort: 2525
    protocol: TCP
    name: smtp
  selector:
    app: discord-mail
