k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-mail-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: public
  rules:
  - host: mail.raegous.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: discord-mail
            port:
              number: 80
  tls:
  - hosts:
    - mail.raegous.dev
    secretName: discord-mail-tls
